--- a/ReciCamPhone.csproj
+++ b/ReciCamPhone.csproj
@@ -161,7 +161,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Hawaii.ClientBase">
-      <HintPath>..\..\..\..\..\opt\microsoft\hawaii.phone\Microsoft Research\Project Hawaii SDK 2.1\Source\Common\ClientLibraryBase\Bin\Debug\Microsoft.Hawaii.ClientBase.dll</HintPath>
+      <HintPath>..\Microsoft.Hawaii.Phone\Common\ClientLibraryBase\Bin\Debug_Fast\Microsoft.Hawaii.ClientBase.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Controls, Version=8.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
