--- a/Tests/ReciCamPhoneTests/ReciCamPhoneTests.csproj
+++ b/Tests/ReciCamPhoneTests/ReciCamPhoneTests.csproj
@@ -78,7 +78,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PageAddContentUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReciCamOcrServiceTests.cs" />
+    <Compile Include="RecipeServiceTests.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
