--- a/ReciCamPhone.csproj
+++ b/ReciCamPhone.csproj
@@ -161,15 +161,6 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Hawaii.ClientBase">
-      <HintPath>..\..\..\..\..\opt\microsoft\hawaii.phone\Microsoft Research\Project Hawaii SDK 2.1\Source\Common\ClientLibraryBase\Bin\Debug\Microsoft.Hawaii.ClientBase.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Phone.Controls, Version=8.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Phone.Controls.Toolkit">
-      <HintPath>..\packages\WPtoolkit.4.2012.10.30\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -177,27 +168,34 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Recipe.cs" />
     <Compile Include="Models\RecipeBase.cs" />
-    <Compile Include="Models\RecipeBaseContent.cs" />
-    <Compile Include="Models\RecipeBaseIngredient.cs" />
-    <Compile Include="Models\RecipeBaseTitle.cs" />
     <Compile Include="Models\RecipeContentType.cs" />
     <Compile Include="Models\RecipePhoto.cs" />
     <Compile Include="PageCropImage.xaml.cs">
       <DependentUpon>PageCropImage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\ReciCamOcrService.cs" />
+    <Compile Include="Services\RecipePhotoService.cs" />
     <Compile Include="Services\RecipeService.cs" />
     <Compile Include="PageAddContent.xaml.cs">
       <DependentUpon>PageAddContent.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBoxEditControl2.xaml.cs">
+      <DependentUpon>TextBoxEditControl2.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="Properties\DesignTimeResources.xaml" Condition="'$(DesignTime)'=='true' OR ('$(SolutionPath)'!='' AND Exists('$(SolutionPath)') AND '$(BuildingInsideVisualStudio)'!='true' AND '$(BuildingInsideExpressionBlend)'!='true')">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
+      <ContainsDesignTimeResources>true</ContainsDesignTimeResources>
+    </Page>
     <Page Include="Resources\GlobalResources.xaml">
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
@@ -221,6 +219,14 @@
     <Page Include="Resources\Styles.xaml">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
+    </Page>
+    <Page Include="Resources\TextBoxStyles.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TextBoxEditControl2.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -1187,6 +1193,10 @@
     <Content Include="Assets\SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Microsoft.Hawaii.Phone\Common\ClientLibraryBase\Microsoft.Hawaii.Client.csproj">
+      <Project>{AC93C88D-4A95-48CD-BA6E-146A03AFEA53}</Project>
+      <Name>Microsoft.Hawaii.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Microsoft.Hawaii.Phone\ServiceClients\Ocr\Microsoft.Hawaii.Ocr.MobileClient.csproj">
       <Project>{888AF97D-C3AD-4EC2-A010-89910B3B5AA3}</Project>
       <Name>Microsoft.Hawaii.Ocr.MobileClient</Name>
@@ -1207,6 +1217,16 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <DesignData Include="SampleData\RecipePhotoServiceSampleData.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+    </DesignData>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Phone.Controls.Toolkit">
+      <HintPath>..\packages\WPtoolkit.4.2012.10.30\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
